<resources>
    <string name="app_name">校园租</string>
    <string name="host">http://192.168.31.199:8080/SpringWind</string>
    <string name="getKey">/account/getPublicKey</string>
    <string name="getProvince">/school/getProvince</string>
    <string name="getCity">/school/getCity?province=</string>
    <string name="getSchool">/school/getSchool?city=</string>
    <string name="login_web">/student/loginMobile</string>
    <string name="send_mail_validate">/student/sendMailMessage?address=</string>
    <string name="mail_validate">/student/validateMail</string>
    <string name="student_register">/student/register</string>
    <string name="classify_index">/classify/queryFromIndex</string>
    <string name="classify_all">/classify/queryList</string>
    <string name="idle_pic_package">/idle_pic</string>
    <string name="add_idle">/idleInfo/add</string>
    <string name="get_idle_page">/idleInfo/toList</string>
    <string name="get_current_user">/student/getCurrentUser</string>
    <string name="get_response_info">/responseInfo/toList</string>
    <string name="add_response_info">/responseInfo/add</string>
    <string name="add_second_response_info">/secondResponseInfo/add</string>
    <string name="has_pay_password">/student/hasPayPassWord</string>
    <string name="add_rent">/rent/add</string>
    <string name="student_update">/student/updateInfo</string>
    <string name="get_base_info">/student/getBaseInfo</string>
    <string name="add_auth_pic">/authPicture/add</string>
    <string name="exit_login">/student/exitLogin</string>
    <string name="chang_password">/student/updatePassword</string>
    <string name="chang_pay_password">/student/updatePayPassword</string>
    <string name="reset_pay_password">/student/restPayPassword</string>
    <string name="reset_password">/student/restPassword</string>
    <string name="get_relation">/rent/getRelation/id/</string>
    <string name="idle_rent_list">/rent/list/id/</string>
    <string name="rent_agree">/rent/agree</string>
    <string name="get_my_push">/idleInfo/getMinePush</string>
    <string name="idle_close">/idleInfo/close</string>
    <string name="rent_finish">/idleInfo/cancel</string>
    <string name="update_idle">/idleInfo/update</string>
    <string name="del_idle">/idleInfo/del</string>
    <string name="get_classify_name">/classify/getName/id/</string>
    <string name="query_mine_rent">/rent/queryMineRent</string>
    <string name="cancel_rent">/rent/cancel</string>
    <string name="find_idle">/idleInfo/id/</string>
    <string name="start_rent">/rent/startRent</string>
    <string name="start_rent_pusher">/rent/startRentPusher</string>
    <string name="del_rent">/rent/delRent</string>
    <string name="disagree_rent">/rent/disagreeRent</string>
    <string name="add_article">/rentNeeds/add</string>
    <string name="needs_list">/rentNeeds/list</string>
    <string name="my_needs">/rentNeeds/mineNeeds</string>
    <string name="del_needs">/rentNeeds/del/id/</string>
    <string name="get_check">/checkStatement/list</string>
    <string name="get_capital">/capital/getMyCapital</string>
    <string name="get_user_push">/idleInfo/getUserPush</string>
    <string name="add_eval">/eval/add</string>
    <string name="c_rent_finish">/rent/finishRent</string>
    <string name="list_eval">/eval/listByPage</string>
    <string name="mine_message">/message/pushUnRead</string>
    <string name="message_list">/message/list</string>
    <string name="add_destroy">/idleInfo/addDestroy</string>
    <string name="add_complain">/orderComplain/add</string>
    <string name="add_other_complain">/complain/add</string>
    <string name="forgot_password_url">/student/modifyForgotPass</string>
    <string name="validate_forgot">/student/validateForgot</string>
    <string name="send_forgot_message">/student/sendForgotMessage</string>
    <string name="update_mail">/student/updateMail</string>
    <string name="send_sms">/student/sendMobileCode/</string>
    <string name="update_phone">/student/updateMobile</string>
    <string name="add_charge">/charge/add</string>
    <string name="add_capitalCash">/capitalCash/add</string>
    <string name="get_rent_count">/rent/getRentCount/</string>
    <string name="double_exit">请再按一次返回按钮退出程序</string>
    <string name="link_error">服务器连接异常</string>
    <string name="password_error">登录失败，账号或密码错误</string>
    <string name="null_school">请选择学校</string>
    <string name="valid_code_label">验证码</string>
    <string name="valid_code">请输入验证码</string>
    <string name="send_mail_success">发送成功</string>
    <string name="mail_null">请输入邮箱地址</string>
    <string name="phone_null">请输入手机号码</string>
    <string name="phone_format_error">手机号码格式错误</string>
    <string name="account_null">请输入账号</string>
    <string name="mail_format_error">邮箱格式错误，请检查邮箱输入是否正确</string>
    <string name="mail_validate_error">验证码错误，请检查邮箱地址或验证码是否正确</string>
    <string name="input_base_info">请输入基本信息</string>
    <string name="user_name_null">用户名不能为空！</string>
    <string name="password_null">密码不能为空！</string>
    <string name="password_not_match">两次输入的密码不一致！</string>
    <string name="pay_password_null">支付密码不能为空！</string>
    <string name="pay_password_not_match">两次输入的支付密码不一致！</string>
    <string name="maid_registered">注册失败，邮箱已经被注册！</string>
    <string name="classify_null">请选择商品分类！</string>
    <string name="title_null">请填写标题！</string>
    <string name="info_null">请填写描述信息！</string>
    <string name="pic_null">请添加图片信息！</string>
    <string name="money_error">最低押金不能小于每日租金！</string>
    <string name="complain_money">赔偿金额:</string>
    <string name="money_format_error">输入金额的异常！</string>
    <string name="type_select">请选择账号类型！</string>
    <string name="null_pay_pic">请上传支付截图</string>
    <string name="money_out_border">您剩余的资金不足！</string>
    <string name="submit_success">提交成功，请等待管理员审核</string>
    <string name="push_success">发布成功！</string>
    <string name="push_error">发布失败！</string>
    <string name="no_more">没有更多了...</string>
    <string name="no_refuse_message_fill">不可发送空的信息！</string>
    <string name="null_fill">不能填写空信息</string>
    <string name="update_success">更新成功！</string>
    <string name="update_error">更新失败！</string>
    <string name="user_update_error">更新失败，可能该用户名或者邮箱已经被注册!</string>
    <string name="old_password_null">旧密码不能为空！</string>
    <string name="password_update_error">密码更新失败</string>
    <string name="pay_password_update_error">支付密码更新失败</string>
    <string name="agree_success">已经同意该用户的请求</string>
    <string name="close_success">下架成功！</string>
    <string name="behavior_success">操作成功！</string>
    <string name="null_info">暂无信息</string>
    <string name="fill_eval">请填写评价内容，您的评价会成为其他用户的参考</string>
    <string name="fill_destroy">请填写损毁内容，这可能影响您申请能否通过</string>
    <string name="fill_score">满意度评分</string>
    <string name="eval_null">评价内容不能为空！</string>
    <string name="destroy_null">内容不能为空！</string>
    <string name="alipay">支付宝</string>
    <string name="wechat">微信</string>
    <string name="account_type">账户类型：</string>
    <string name="login">登录</string>
    <string name="user_name">用户名/邮箱/手机号</string>
    <string name="account">账号</string>
    <string name="money">提现金额</string>
    <string name="money2">充值金额</string>
    <string name="pay_pic">支付截图</string>
    <string name="user_show_name">用户名</string>
    <string name="chang_pass_label">修改密码</string>
    <string name="password">密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="select_school">点击选择学校</string>
    <string name="school_list">学校列表</string>
    <string name="back">返回</string>
    <string name="register_btn">注册</string>
    <string name="mail_input_title">请输入电子邮箱</string>
    <string name="send_valid_code">发送验证码</string>
    <string name="next">下一步</string>
    <string name="finish">完成</string>
    <string name="index">首页</string>
    <string name="newest">帖子</string>
    <string name="add">发布</string>
    <string name="message">消息</string>
    <string name="mine">我的</string>
    <string name="mine_need">我的帖子</string>
    <string name="mine_push">我发布的</string>
    <string name="mine_rent">我要租的</string>
    <string name="credit">信誉分：</string>
    <string name="mine_check">我的账单</string>
    <string name="push_idle">发布闲置</string>
    <string name="push_article">发布帖子</string>
    <string name="push_title">标题 品牌型号都是买家喜欢搜索的</string>
    <string name="push_article_title">标题</string>
    <string name="context">内容</string>
    <string name="push_hint">商品描述</string>
    <string name="cost">押金（元）</string>
    <string name="cost_day">每天（元）</string>
    <string name="address">交易地点</string>
    <string name="classify">分类</string>
    <string name="add_pic">添加图片</string>
    <string name="select_classify">选择分类</string>
    <string name="deposit">押金：￥</string>
    <string name="rental">租金/日：￥</string>
    <string name="num_of_want">申请数：</string>
    <string name="refuse">留言</string>
    <string name="no_refuse">还没有人留言</string>
    <string name="sent">发送</string>
    <string name="rent">申请租赁</string>
    <string name="change_pay_password">修改支付密码</string>
    <string name="pay_password">支付密码</string>
    <string name="confirm_pay_password">确认支付密码</string>
    <string name="real_name">真实姓名</string>
    <string name="school">学校</string>
    <string name="sex">性别</string>
    <string name="telephone">手机号码</string>
    <string name="mail">邮箱</string>
    <string name="school_validate">校园卡验证</string>
    <string name="id_card_validate">身份证认证</string>
    <string name="un_validate">未验证</string>
    <string name="validated">已验证</string>
    <string name="validate_no_pass">未通过验证</string>
    <string name="validating">认证中</string>
    <string name="exit">注销登陆</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="cancle_rent">取消租赁</string>
    <string name="agree">同意</string>
    <string name="refuse_rent">拒绝</string>
    <string name="edit">编辑</string>
    <string name="close_btn">下架</string>
    <string name="show_rent">查看申请</string>
    <string name="delete">删除</string>
    <string name="rented">已经租赁</string>
    <string name="received">已经收到</string>
    <string name="end_rent">终止租赁</string>
    <string name="close">已经下架</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="forgot_title">找回密码</string>
    <string name="forgot_context">是否要重置您的密码并将密码发送至您的邮箱？</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="detail">详细</string>
    <string name="destroy_detail">损毁详情</string>
    <string name="complain">申请赔偿</string>
    <string name="reason">举报或投诉原因</string>
    <string name="input_pay_password">请输入支付密码</string>
    <string name="rent_submit_success">请求已经发送，请耐心等待！</string>
    <string name="rent_pepole">申请人</string>
    <string name="null_person">暂时没有人申请</string>
    <string name="had_to_pay">需要支付(元)</string>
    <string name="never_rent">未租赁</string>
    <string name="confirm_rent">已确认租户</string>
    <string name="renting">正在出租</string>
    <string name="finished">已完成</string>
    <string name="my_push_title">我的闲置</string>
    <string name="close_by_self">已下架</string>
    <string name="admin_close">非法下架</string>
    <string name="submit_destroy">提交损毁</string>
    <string name="submit">提交</string>
    <string name="alter_idle">修改闲置</string>
    <string name="start">开始</string>
    <string name="add_des_info">损毁填写</string>
    <string name="return_back">归还</string>
    <string name="request_return">申请归还</string>
    <string name="idle">闲置</string>
    <string name="capital">余额</string>
    <string name="last_capital">账户余额</string>
    <string name="recharge">充值</string>
    <string name="cash">提现</string>
    <string name="eval">评价</string>
    <string name="had_eval">已评价</string>
    <string name="student_id">学号</string>
    <string name="all_classify_title">所有分类</string>
    <string name="requested">已申请</string>
    <string name="agree_request">已同意</string>
    <string name="rent_now">租赁中</string>
</resources>