<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/ali_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/wechat_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/account_type"
                    android:textSize="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <com.rey.material.widget.RadioButton
                    android:id="@+id/alipay"
                    android:padding="10dp"
                    style="@style/Material.Drawable.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/alipay"/>
                <com.rey.material.widget.RadioButton
                    android:id="@+id/wechat"
                    android:padding="10dp"
                    style="@style/Material.Drawable.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:text="@string/wechat"/>
            </LinearLayout>

            <EditText
                android:padding="10dp"
                android:id="@+id/money"
                android:background="@android:color/white"
                android:textSize="20dp"
                android:inputType="numberDecimal"
                android:hint="@string/money2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/pay_pic"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/pic"
                android:src="@drawable/add_btn"
                android:layout_width="60dp"
                android:layout_height="60dp" />
            <Button
                android:id="@+id/submit_btn"
                android:layout_margin="6dp"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/login_click_ripple"
                android:text="@string/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/progress_view"
        android:background="#66000000"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_centerInParent="true"
            android:indeterminateTint="#408Af8"
            android:layout_width="48dp"
            android:layout_height="48dp" />
    </RelativeLayout>
</RelativeLayout>
