<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/splash_background"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ProgressBar
        android:progress="25"
        android:layout_width="match_parent"
        android:layout_height="3dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/back_tool_bar"/>
        <include layout="@layout/next_tool_bar"/>
    </RelativeLayout>

    <TextView
        android:text="@string/mail_input_title"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="30dp"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/mailAddress"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:hint="@string/valid_code"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:paddingLeft="3dp"
            android:text="@string/send_valid_code"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />
    </LinearLayout>
</LinearLayout>
