<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/title"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/back_button"
            android:background="?android:selectableItemBackgroundBorderless"
            android:layout_margin="6dp"
            android:padding="4dp"
            android:src="@drawable/back"
            android:scaleType="fitCenter"
            android:layout_centerVertical="true"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <TextView
            android:textAlignment="center"
            android:text="@string/push_idle"
            android:textSize="20dp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <com.rey.material.widget.Button
        android:id="@+id/push_button"
        android:text="@string/add"
        android:layout_margin="6dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ScrollView
        android:layout_below="@id/title"
        android:layout_above="@id/push_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:padding="6dp"
                android:background="@null"
                android:hint="@string/push_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <View
                android:background="#F2F2F2"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <EditText
                android:inputType="textMultiLine"
                android:padding="6dp"
                android:hint="@string/push_hint"
                android:gravity="left|top"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="100dp" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/idle_image_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v7.widget.RecyclerView>
            <View
                android:layout_below="@id/title"
                android:background="#F2F2F2"
                android:layout_width="match_parent"
                android:layout_height="6dp"/>
            <RelativeLayout
                android:id="@+id/classify_rl"
                android:background="?android:selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="35dp">
                <TextView
                    android:id="@+id/classify_title"
                    android:text="@string/classify"
                    android:padding="6dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:id="@+id/go_iv"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="3dp"
                    android:src="@drawable/go"
                    android:layout_width="20dp"
                    android:layout_height="20dp" />
                <TextView
                    android:id="@+id/classify_name_tv"
                    android:layout_toRightOf="@id/classify_title"
                    android:layout_toLeftOf="@id/go_iv"
                    android:background="@null"
                    android:layout_centerVertical="true"
                    android:padding="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <View
                android:background="#F2F2F2"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/cost"
                    android:padding="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:background="@null"
                    android:padding="6dp"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:background="#F2F2F2"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/cost_day"
                    android:padding="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:background="@null"
                    android:padding="6dp"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:background="#F2F2F2"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/address"
                    android:padding="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:background="@null"
                    android:padding="6dp"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <View
        android:layout_below="@id/title"
        android:background="#F2F2F2"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
</RelativeLayout>
