<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:padding="10dp"
        android:id="@+id/text"
        android:inputType="textEmailAddress"
        android:background="@android:color/white"
        android:textSize="20dp"
        android:hint="@string/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <!--<ImageButton
        android:id="@+id/clear_btn"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:src="@drawable/clear"
        android:background="?android:selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        android:layout_width="20dp"
        android:layout_height="20dp" />-->
    <LinearLayout
        android:layout_below="@id/text"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:padding="10dp"
            android:id="@+id/code"
            android:layout_margin="4dp"
            android:background="@android:color/white"
            android:textSize="20dp"
            android:hint="@string/valid_code"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/send_btn"
            android:layout_margin="4dp"
            android:background="@drawable/button_ripple"
            android:text="@string/send_valid_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/progress_view"
        android:background="#66000000"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_centerInParent="true"
            android:indeterminateTint="#408Af8"
            android:layout_width="48dp"
            android:layout_height="48dp" />
    </RelativeLayout>
</RelativeLayout>
